@@ -1,3 +1,9 @@
+2003-11-10  Shaun McCance  <shaunm@gnome.org>
+
+	* src/info2html/main.c:
+	- Fix silliness with g_strdup_printf
+	  (Joe Marcus Clarke and Roderich Schupp)
+
 2003-09-01  Shaun McCance  <shaunm@gnome.org>
 
 	* configure.in: Version 2.4.1
